# tesi-ssri-cyberminacce

./: .gitignore  README.md
a-simple-ransomware/: CMakeLists.txt  README.md  vcpkg.json
a-simple-ransomware/data/: DivinaCommedia.txt  DivinaCommedia.txt.enc  Example1.txt.enc
a-simple-ransomware/src/: C2CCommunication.cpp  C2CCommunication.h  main.cpp
c2/: README.md
c2-demo/: pom.xml
c2-demo/src/main/java/it/ssri/tesi/c2/: C2Application.java
c2-demo/src/main/java/it/ssri/tesi/c2/api/: C2Api.java
c2-demo/src/main/java/it/ssri/tesi/c2/dto/: VictimDto.java
c2-demo/src/main/java/it/ssri/tesi/c2/model/: Configuration.java  Victim.java
c2-demo/src/main/java/it/ssri/tesi/c2/repository/: ConfigurationRepository.java
c2-demo/src/main/java/it/ssri/tesi/c2/service/: C2Service.java
c2-demo/src/main/resources/: application.yml  schema.sql
c2/src/main/java/it/ssri/tesi/c2/api/: C2Api.java
c2/src/main/java/it/ssri/tesi/c2/dto/: VictimDto.java
c2/src/main/java/it/ssri/tesi/c2/model/: Sniffer.java  Victim.java
c2/src/main/java/it/ssri/tesi/c2/repository/: SnifferRepository.java  VictimRepository.java
c2/src/main/resources/: data.sql  schema.sql
decryptor/: CMakeLists.txt  vcpkg.json
decryptor/src/: main.cpp
mitb-form-grabbing/chrome-extension/: content.js  manifest.json
webapp/: pom.xml
webapp/src/main/java/it/ssri/tesi/webapp/: WebappApplication.java
webapp/src/main/resources/: application.yaml
webapp/src/main/resources/static/: index.html
webapp/src/main/resources/static/js/: script.js
webapp/src/main/resources/templates/: home.html
(+4 files in other folders)
